crates/citeproc/tests/snapshots/suite__label_CollapsedPageNumberPluralDetection.txt.snap
---
source: crates/citeproc/tests/suite.rs
expression: res
---
His Anonymous Life, page 327–30
His Anonymous Life, pages 427–430
