crates/citeproc/tests/snapshots/suite__label_EditorTranslator1.txt.snap
---
source: crates/citeproc/tests/suite.rs
expression: res
---
<div class="csl-bib-body">
<div class="csl-entry">1.	Иванов И.И. Пример оформления книги с редактором и переводчиком в одном лице : вид издания : in 5 vols. Vol. 2. Пример оформления книги с редактором и переводчиком в одном лице / И.И. Иванов, П.П. Петров, С.С. Сидоров; ed &amp; trans. Р.Р. Романов Дополнительно. – Тюмень: Дом, 2013. – 10. – 100 p.</div>
</div>
