crates/citeproc/tests/snapshots/suite__locator_TrickyEntryForPlurals.txt.snap
---
source: crates/citeproc/tests/suite.rs
expression: res
---
Book Title, p. vol. 1, fol. 186, 8 April 1544
