crates/citeproc/tests/snapshots/suite__magic_SuperscriptChars.txt.snap
---
source: crates/citeproc/tests/suite.rs
expression: res
---
<sup>a</sup>
<sup>2</sup>
<sup>3</sup>
<sup>1</sup>
<sup>o</sup>
<sup>h</sup>
<sup>ɦ</sup>
<sup>j</sup>
<sup>r</sup>
<sup>ɹ</sup>
<sup>ɻ</sup>
<sup>ʁ</sup>
<sup>w</sup>
<sup>y</sup>
<sup>ɣ</sup>
<sup>l</sup>
<sup>s</sup>
<sup>x</sup>
<sup>ʕ</sup>
<sup>A</sup>
<sup>Æ</sup>
<sup>B</sup>
<sup>D</sup>
<sup>E</sup>
<sup>Ǝ</sup>
<sup>G</sup>
<sup>H</sup>
<sup>I</sup>
<sup>J</sup>
<sup>K</sup>
<sup>L</sup>
<sup>M</sup>
<sup>N</sup>
<sup>O</sup>
<sup>Ȣ</sup>
<sup>P</sup>
<sup>R</sup>
<sup>T</sup>
<sup>U</sup>
<sup>W</sup>
<sup>a</sup>
<sup>ɐ</sup>
<sup>ɑ</sup>
<sup>ᴂ</sup>
<sup>b</sup>
<sup>d</sup>
<sup>e</sup>
<sup>ə</sup>
<sup>ɛ</sup>
<sup>ɜ</sup>
<sup>g</sup>
<sup>k</sup>
<sup>m</sup>
<sup>ŋ</sup>
<sup>o</sup>
<sup>ɔ</sup>
<sup>ᴖ</sup>
<sup>ᴗ</sup>
<sup>p</sup>
<sup>t</sup>
<sup>u</sup>
<sup>ᴝ</sup>
<sup>ɯ</sup>
<sup>v</sup>
<sup>ᴥ</sup>
<sup>β</sup>
<sup>γ</sup>
<sup>δ</sup>
<sup>φ</sup>
<sup>χ</sup>
<sup>0</sup>
<sup>i</sup>
<sup>4</sup>
<sup>5</sup>
<sup>6</sup>
<sup>7</sup>
<sup>8</sup>
<sup>9</sup>
<sup>+</sup>
<sup>−</sup>
<sup>=</sup>
<sup>(</sup>
<sup>)</sup>
<sup>n</sup>
<sup>SM</sup>
<sup>TM</sup>
<sup>一</sup>
<sup>二</sup>
<sup>三</sup>
<sup>四</sup>
<sup>上</sup>
<sup>中</sup>
<sup>下</sup>
<sup>甲</sup>
<sup>乙</sup>
<sup>丙</sup>
<sup>丁</sup>
<sup>天</sup>
<sup>地</sup>
<sup>人</sup>
ˀ
ˁ
ۥ
ۦ
