crates/citeproc/tests/snapshots/suite__position_IbidInText.txt.snap
---
source: crates/citeproc/tests/suite.rs
expression: res
---
[0] Appleton “Tom Swift and His Electric Runabout” (1910).
[1] Ibid.
[2] Bloggs “A Very Short Book Indeed” (2012).

