crates/citeproc/tests/snapshots/suite__textcase_RepeatedTitleBug.txt.snap
---
source: crates/citeproc/tests/suite.rs
expression: res
---
<div class="csl-bib-body">
<div class="csl-entry">Jenrich, R. I., &amp; Bentler, P. M. (2012). Exploratory bi-factor analysis: The oblique case. <i>Psychometrika</i>, <i>77</i>(3), 442–454. https://doi.org/10.1007/s11336-012-9269-1</div>
</div>
